--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -1,5 +1,5 @@
 .section {
-	margin: 90px 0;
+	margin: 70px 0;
 
 	&__center {
 		padding: 0 20px;
