--- a/src/styles/components/slider-logos.scss
+++ b/src/styles/components/slider-logos.scss
@@ -1,5 +1,5 @@
 .slider-logos {
-	margin: 90px 0;
+	margin: 70px 0;
 
 	&__slider {
 		position: relative;
