--- a/src/styles/components/slider-videos.scss
+++ b/src/styles/components/slider-videos.scss
@@ -1,6 +1,6 @@
 .slider-videos {
 	position: relative;
-	margin: 90px 0;
+	margin: 70px 0;
 
 	&__wrapper {
 		position: relative;
