--- a/src/styles/components/video.scss
+++ b/src/styles/components/video.scss
@@ -1,6 +1,6 @@
 .video {
 	position: relative;
-	padding: 90px 0;
+	padding: 70px 0;
 
 	&--top {
 		padding: 0 !important;
